--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Second Git Repo
-    </title>
+    <title>My Second Git Repo</title>
 </head>
 <body>
+
+    <h1>Voice of Chinese students</h1>
+
+    <h3>We are going to arrange a human chain programme at press club premises on 21th June 2021.All the students of different chinese university are requesed to come and raise voices to get back in China.</h3>
+
+    <img src="unnamed.jpg" alt="chinese ambassador">
     
 </body>
 </html>
